cluster/k8s/cpap-sync/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cpap-sync
  labels:
    name: cpap-sync
    pod-security.kubernetes.io/enforce: privileged
